--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,7 @@
 .appName {
   color: black;
   position: absolute;
-  top:0;
+  top: 0;
   display: flex;
   width: 100%;
   justify-content: center;
@@ -22,11 +22,22 @@
   min-height: 100vh;
 }
 
+.logincontainer {
+  padding: 0 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+  width: 100%;
+}
+
 .imagecontainer {
   margin-top: 20px;
   display: grid;
   grid-template-columns: 200px 200px 200px 200px;
-  grid-template-rows: 150px auto 150px; 
+  grid-template-rows: 150px auto 150px;
   column-gap: 10px;
   row-gap: 70px;
   color: black;
@@ -52,6 +63,19 @@
   border: none;
 }
 
+.adminbutton {
+  color: white;
+  font-size: 18px;
+  background-color: lightblue;
+  border: 2px solid white;
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-right: 30px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 .topiccontainer {
   padding: 10px;
   border-radius: 8%;
@@ -64,7 +88,6 @@
   font-weight: bold;
   font-size: 24px;
 }
-
 
 .optioncontainer {
   width: 840px;
@@ -96,10 +119,10 @@
   background-color: lightblue;
   color: white;
   border: 1px solid white;
-  border-radius: 4px;;
+  border-radius: 4px;
 }
 
-.searchitemtext{
+.searchitemtext {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -220,6 +243,47 @@
 }
 
 .link {
+  text-decoration: underline;
+}
+
+.logininfo {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  height: 60%;
+  color: black;
+  align-items: center;
+}
+
+.logininput {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.submitbutton {
+  width: 200px;
+  margin-top: 7px;
+  height: 35px;
+  background: lightblue;
+  border-radius: 3px;
+  border: none;
+}
+
+/* .loginbox {
+  width: 400px;
+  height: 400px;
+  border-radius: 3px;
+  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
+.signupbutton {
+  background: none;
+  color: black;
+  border: none;
   text-decoration: underline;
 }
 
