--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,16 +22,18 @@
   min-height: 100vh;
 }
 
-.logincontainer {
+/* .logincontainer {
+  position: relative;
+  right: 0px;
   padding: 0 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  min-height: 100vh;
-  width: 100%;
-}
+  min-height: 50%;
+  width: 40%;
+} */
 
 .imagecontainer {
   margin-top: 20px;
@@ -67,13 +69,26 @@
   color: white;
   font-size: 18px;
   background-color: lightblue;
-  border: 2px solid white;
   border-radius: 5px;
-  margin-top: 5px;
+  margin-top: 7px;
   margin-right: 30px;
   position: absolute;
   top: 0;
   right: 0;
+  border: none;
+}
+
+.addbutton {
+  color: white;
+  font-size: 18px;
+  background-color: lightblue;
+  border-radius: 5px;
+  margin-top: 4px;
+  margin-right: 105px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
 }
 
 .topiccontainer {
@@ -279,6 +294,22 @@
   justify-content: center;
   align-items: center;
 } */
+
+.logincontainer {
+position: absolute;
+right: 0;
+padding: 0 2rem;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+text-align: center;
+min-height: 50%;
+width: 40%;
+border: solid 1px black;
+background: white;
+margin-top: -60px;
+}
 
 .signupbutton {
   background: none;
